--- a/7.html
+++ b/7.html
@@ -51,7 +51,7 @@
 		<li>Przeznaczenie: buty na cieplejsze dni </li>
 		<li>Buty z bardzo dużą podeszwą co przekłada się na wygodę</li>
 	</ul>
-	<a href="index (2).html">Powrót do strony głównej</a>
+	<a href="index.html">Powrót do strony głównej</a>
 	<a href="https://stockx.com/adidas-yeezy-boost-700-v3-azael">Cena z drugiej ręki</a>
 	</div>
 </body>
