--- a/6.html
+++ b/6.html
@@ -50,7 +50,7 @@
 		<li>Przeznaczenie: buty na cieplejsze dni </li>
 		<li>Samowiążące się buty</li>
 	</ul>
-	<a href="index (2).html">Powrót do strony głównej</a>
+	<a href="index.html">Powrót do strony głównej</a>
 	<a href="https://stockx.com/nike-adapt-bb-black-pure-platinum">Cena z drugiej ręki</a>
 	</div>
 </body>
