--- a/5.html
+++ b/5.html
@@ -49,7 +49,7 @@
 		<li>Przeznaczenie: buty na cieplejsze dni </li>
 		<li>Damska rozmiarówka</li>
 	</ul>
-	<a href="index (2).html">Powrót do strony głównej</a>
+	<a href="index.html">Powrót do strony głównej</a>
 	<a href="https://stockx.com/nike-air-vapormax-2019-cpfm">Cena z drugiej ręki</a>
 	</div>
 </body>
