--- a/4.html
+++ b/4.html
@@ -51,7 +51,7 @@
 		<li>Przeznaczenie: buty na cieplejsze dni </li>
 		<li>Do butów dodawana jest trytytka, która dopełnia wygląd buta</li>
 	</ul>
-	<a href="index (2).html">Powrót do strony głównej</a>
+	<a href="index.html">Powrót do strony głównej</a>
 	<a href="https://stockx.com/nike-air-force-1-low-off-white-university-blue">Cena z drugiej ręki</a>
 	</div>
 </body>
