--- a/3.html
+++ b/3.html
@@ -51,7 +51,7 @@
 		<li>Przeznaczenie: buty na cieplejsze dni </li>
 		<li>Po zdarciu materiału wyłania się nowa kolorystyka</li>
 	</ul>
-	<a href="index (2).html">Powrót do strony głównej</a>
+	<a href="index.html">Powrót do strony głównej</a>
 	<a href="https://stockx.com/nike-air-force-1-low-clot-blue-silk">Cena z drugiej ręki</a>
 	</div>
 </body>
