--- a/2.html
+++ b/2.html
@@ -53,7 +53,7 @@
 		<li>Przeznaczenie: buty na jesienne dni </li>
 		<li>Trzy pary sznurówek do wykorzystania</li>
 	</ul>
-	<a href="index (2).html">Powrót do strony głównej</a>
+	<a href="index.html">Powrót do strony głównej</a>
 	<a href="https://stockx.com/air-jordan-1-retro-high-travis-scott">Cena z drugiej ręki</a>
 	</div>
 </body>
