--- a/1.html
+++ b/1.html
@@ -56,7 +56,7 @@
 		<li>Przeznaczenie: buty na cieplejszą pogodę </li>
 		<li>Dwie pary sznurówek do wykorzystania</li>
 	</ul>
-	<a href="index (2).html">Powrót do strony głównej</a>
+	<a href="index.html">Powrót do strony głównej</a>
 	<a href="https://stockx.com/search/sneakers?s=nike%20sacai%20ld%20waffle">Cena z drugiej ręki</a>
 	</div>
 </body>
