--- a/index.html
+++ b/index.html
@@ -160,6 +160,8 @@
   <label for="yes">Tak</label><br> 
   <input type="radio" id="no" name="opinion" value="no">
   <label for="no">Nie</label><br>
+<div class="reftile" style="margin-left:300px; padding-top:15px; width:280px; margin-top:0px;
+                margin-bottom:0px;">Powrót na górę strony</div>
  
 
  <h3>Jeśli nie napisz nam jak możemy ulepszyć naszą stronę.</h3>  
