--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="tekst">
-		<h1>7 CUDOWNYCH KOLABORACJI W ŚWIECIE BUTÓW</h1>
+		<h1 name="gora">7 CUDOWNYCH KOLABORACJI W ŚWIECIE BUTÓW</h1>
 	</div>
 	<div class="index">
 		<a href="1.html" target="_blank">1. Sacai x Nike LD Waffle</a>
@@ -160,8 +160,7 @@
   <label for="yes">Tak</label><br> 
   <input type="radio" id="no" name="opinion" value="no">
   <label for="no">Nie</label><br>
-<div class="link" style="margin-left:30px; padding-top:15px; width:28px; margin-top:0px;
-                margin-bottom:0px;">Do góry</div>
+<a href="#gora">to jest odnośnik, który przeniesie Cię na górę strony</a>
  
 
  <h3>Jeśli nie napisz nam jak możemy ulepszyć naszą stronę.</h3>  
