--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
   <label for="yes">Tak</label><br> 
   <input type="radio" id="no" name="opinion" value="no">
   <label for="no">Nie</label><br>
- 
+ <a href="PiramidaCheopsa.html">na górę</a>
 
  <h3>Jeśli nie napisz nam jak możemy ulepszyć naszą stronę.</h3>  
   <label><textarea class="message">Miejsce na twoją opinie</textarea></label>
