--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<div class="tekst">
 		<h1>7 CUDOWNYCH KOLABORACJI W ŚWIECIE BUTÓW</h1>
 	</div>
+	<img class="czesc" src="IMG/logo.png" alt="logo" style="float: left;"/>
 	<div class="index">
 		<a href="1.html" target="_self">1. Sacai x Nike LD Waffle</a>
 		<a href="2.html" target="_self">2. Travis Scott x Air Jordan 1</a>
