--- a/2.html
+++ b/2.html
@@ -10,6 +10,7 @@
 	<div class="tekst">
 		<h1>2. Travis Scott x Air Jordan 1</h1>
 	</div>
+	<img class="czesc" src="IMG/logo.png" alt="logo" style="float: left;"/>
 	<img src="IMG/2.jpg" width="750" height="700" alt="Model Travis Scott x Air Jordan 1" style="float: right">
 	<p class="tekst1"> Współpraca Jordan Brand z młodym raperem z Houston rozrasta<br>
 	się właśnie o kolejny model butów. Przed Wami oficjalne zdjęcia<br>
