--- a/6.html
+++ b/6.html
@@ -10,6 +10,7 @@
 	<div class="tekst">
 		<h1>6. Nike Adapt BB</h1>
 	</div>
+	<img class="czesc" src="IMG/logo.png" alt="logo" style="float: left;"/>
 	<img src="IMG/6.jpg" width="620" height="550" alt="Model Nike Adapt BB" style="float: right">
 	<p class="tekst1">Przełomowy elektroniczny system sznurowania,<br>
 					który uwzględnia kształt stopy i sprawia, że buty<br>
