--- a/1.html
+++ b/1.html
@@ -10,7 +10,7 @@
 	<div class="tekst">
 		<h1>1. Sacai x Nike LD Waffle</h1>
 	</div>
-	<img class="czesc" src="IMG/logo.png" alt="logo" style="float: left;"/>
+	<img class="czesc" src="IMG/logo.jpg" alt="logo" style="float: left;"/>
 	<img src="IMG/1.jpg" width="700" height="700" alt="Modele Nike x Sacai LD Waffle" style="float: right">
 	<p class="tekst1"> W wyniku współpracy z japońską marką modową<br>
 	sacai projektant Chitose Abe połączył dwa kultowe<br>
