--- a/3.html
+++ b/3.html
@@ -10,7 +10,7 @@
 	<div class="tekst">
 		<h1>3. Clot x Nike Air Force 1</h1>
 	</div>
-	<img class="czesc" src="IMG/logo.png" alt="logo" style="float: left;"/>
+	<img class="czesc" src="IMG/logo.jpg" alt="logo" style="float: left;"/>
 	<img src="IMG/3.jpg" width="750" height="750" alt="Model Clot x Nike Air Force 1" style="float: right">
 	<p class="tekst1">Istotą hasła All For One („Wszyscy za jednego”) jest<br>
 					zwyczaj oddawania tego, co się wcześniej dostało, tak<br>
