--- a/4.html
+++ b/4.html
@@ -10,7 +10,7 @@
 	<div class="tekst">
 		<h1>4. Off-White x Nike Air Force 1 "MCA"</h1>
 	</div>
-	<img class="czesc" src="IMG/logo.png" alt="logo" style="float: left;"/>
+	<img class="czesc" src="IMG/logo.jpg" alt="logo" style="float: left;"/>
 	<img src="IMG/4.jpg" width="750" height="750" alt="Model Nike x OFF-WHITE MCA" style="float: right">
 	<p class="tekst1">Buty Off-White ™ x Nike Air Force 1 „MCA” mają cholewki<br>
 					z niebieskiej skóry, które są ozdobione dużymi metalicznymi<br>
