--- a/5.html
+++ b/5.html
@@ -10,7 +10,7 @@
 	<div class="tekst">
 		<h1>5. Cactus Plant Flea Market x Nike VaporMax 2019</h1>
 	</div>
-	<img class="czesc" src="IMG/logo.png" alt="logo" style="float: left;"/>
+	<img class="czesc" src="IMG/logo.jpg" alt="logo" style="float: left;"/>
 	<img src="IMG/5.jpg" width="700" height="600" alt="Model Cactus Plant Flea Market x Nike VaporMax 2019" style="float: right">
 	<p class="tekst1">Dla nieświadomych pchli targ Cactus Plant to niewielka<br>
 					marka streetwear, która od wielu lat robi ogromne fale<br>
