--- a/7.html
+++ b/7.html
@@ -10,7 +10,7 @@
 	<div class="tekst">
 		<h1>7. Adidas Yeezy 700 V3 Azael</h1>
 	</div>
-	<img class="czesc" src="IMG/logo.png" alt="logo" style="float: left;"/>
+	<img class="czesc" src="IMG/logo.jpg" alt="logo" style="float: left;"/>
 	<img src="IMG/7.jpg" width="700" height="600" alt="Model Nike x OFF-WHITE MCA" style="float: right">
 	<p class="tekst1">Yeezy wprowadza nową odmianę Boost 700 z Yeezy Boost<br>
 					700 V3 Azael. Trzecie wcielenie Yeezy Boost 700 to jeden<br>
